app/styles/style.css
/* ... */
#sign-nav a {
  color: rgb(100, 100, 100);
  font-family: "OpenSans-Regular", Helvetica, Arial, sans-serif;
  background-color: transparent;
  border: none;
}


/* FOOTER */
footer {
  min-height: 50px;
  text-align: center;
  line-height: 50px;
  color: rgb(255, 255, 255);
  background-color: rgb(50, 50, 50);
}

.footer-description {
  margin: 0;
}

.footer-icon {
  color: rgb(255, 29, 37);
}

.footer-link,
.footer-link:hover {
  color: rgb(255, 255, 255);
}


/* FORMS */
.input-prepend {
  display: block;
  width: 100%;
  height: 45px;
  margin: 0 0 11px;
  padding: 10px 45px 10px 0;
  color: rgb(0, 0, 0);
  font: 100 15px/20px "OpenSans-Light";
  white-space: nowrap;
  border: 1px solid rgb(230, 230, 230);
  background-color: rgb(255, 255, 255);
  -webkit-transition: all 0.2s ease-out;
     -moz-transition: all 0.2s ease-out;
      -ms-transition: all 0.2s ease-out;
       -o-transition: all 0.2s ease-out;
          transition: all 0.2s ease-out;
}

.input-prepend-file {
  height: auto;
  padding-left: 10px;
}

.input-icon {
  float: left;
  display: block;
  width: 15px;
  margin: auto 10px auto 10px;
  color: rgb(230, 230, 230);
  text-align: center;
  line-height: 25px;
}

.input-text {
  width: 100%;
  color: rgb(0, 0, 0);
  line-height: 22px;
  border: none;
  background-color: transparent;
}

.btn {
  width: 100%;
  height: 45px;
  padding: 0 12px;
  color: white;
  text-transform: uppercase;
  font-family: "OpenSans-Regular", Helvetica, Arial, sans-serif;
  line-height: 45px;
  border: none;
  border-radius: 0;
}

.btn:hover,
.btn:focus,
.btn:active {
  color: white;
}

.modal .btn {
  width: auto;
}

.modal .btn-big {
  font-size: 22px;
}

.multiple-input input[type="radio"] {
  margin-top: 16px;
  margin-bottom: 16px;
}

.primary-btn    { background-color: rgb(254, 80, 81);   }
.secondary-btn  { background-color: rgb(95, 182, 245);  }
.tertiary-btn   { background-color: rgb(255, 168, 72);  }
.quaternary-btn { background-color: rgb(141, 209, 97);  }
.quinary-btn    { background-color: rgb(255, 149, 189); }

.primary-btn:hover,
.primary-btn:focus,
.primary-btn:active {
  background-color: rgb(255, 29, 37);
}

.secondary-btn:hover,
.secondary-btn:focus,
.secondary-btn:active {
  background-color: rgb(63, 169, 245);
}

.tertiary-btn:hover,
.tertiary-btn:focus,
.tertiary-btn:active {
  background-color: rgb(255, 147, 30);
}

.quaternary-btn:hover,
.quaternary-btn:focus,
.quaternary-btn:active {
  background-color: rgb(122, 201, 67);
}

.quinary-btn:hover,
.quinary-btn:focus,
.quinary-btn:active {
  background-color: rgb(255, 108, 164);
}

.primary .input-prepend-active    { border-color: rgb(255, 29, 37);    }
.secondary .input-prepend-active  { border-color: rgb(63, 169, 245);   }
.tertiary .input-prepend-active   { border-color: rgb(255, 147, 30);   }
.quaternary .input-prepend-active { border-color: rgb(122, 201, 67);   }
.quinary .input-prepend-active    { border-color: rgb(255, 108, 164);  }

.option-default {
  color: rgb(170, 170, 170);
}


/* TABLES */
.grid-view-table-container {
  /*height: -webkit-calc(100% - 50px);
  height: -moz-calc(100% - 50px);
  height: calc(100% - 50px);*/
  overflow-y: auto;
}

#grid-view-msg {
  margin-top: 100px;
  text-align: center;
}

td {
  padding: 5px;
  white-space: nowrap;
}

thead {
  color: rgb(150, 150, 150);
  text-align: left;
  text-transform: uppercase;
  border-bottom: 2px solid rgb(230, 230, 230);
}

.primary thead     { color: rgb(255, 29, 37);    }
.secondary thead   { color: rgb(63, 169, 245);   }
.tertiary thead    { color: rgb(255, 147, 30);   }
.quaternary thead  { color: rgb(122, 201, 67);   }
.quinary thead     { color: rgb(255, 108, 164);  }

th {
  padding: 5px;
  font-weight: normal;
  white-space: nowrap;
}

th:first-child {
  width: 100%;
}

tbody tr {
  height: 40px;
  border-bottom: 1px solid rgb(240, 240, 240);
}

td:first-child {
  font-variant: small-caps;
  font-size: 15px;
  cursor: pointer;
}

td:first-child span {
  line-height: 30px;
}

.primary td:first-child     { color: rgb(255, 29, 37);    }
.secondary td:first-child   { color: rgb(63, 169, 245);   }
.tertiary td:first-child    { color: rgb(255, 147, 30);   }
.quaternary td:first-child  { color: rgb(122, 201, 67);   }
.quinary td:first-child     { color: rgb(255, 108, 164);  }

.primary tbody tr:not(.itemActive):hover    { background-color: rgba(254, 80, 81, 0.1);   }
.secondary tbody tr:not(.itemActive):hover  { background-color: rgba(95, 182, 245, 0.1);  }
.tertiary tbody tr:not(.itemActive):hover   { background-color: rgba(255, 168, 72, 0.1);  }
.quaternary tbody tr:not(.itemActive):hover { background-color: rgba(141, 209, 97, 0.1);  }
.quinary tbody tr:not(.itemActive):hover    { background-color: rgba(255, 149, 189, 0.1); }

.table-icon {
  width: 25px;
  margin-right: 5px;
  vertical-align: bottom;
}

td:first-child span:hover {
  text-decoration: underline;
}

.primary .itemActive    { background-color: rgba(254, 80, 81, 0.7);   }
.secondary .itemActive  { background-color: rgba(95, 182, 245, 0.7);  }
.tertiary .itemActive   { background-color: rgba(255, 168, 72, 0.7);  }
.quaternary .itemActive { background-color: rgba(141, 209, 97, 0.7);  }
.quinary .itemActive    { background-color: rgba(255, 149, 189, 0.7); }


/* COLORS */
.primary .highlight,
.primary .subtitle {
  color: rgb(255, 29, 37);
}

.secondary .highlight,
.secondary .subtitle {
  color: rgb(63, 169, 245);
}

.tertiary .highlight,
.tertiary .subtitle {
  color: rgb(255, 147, 30);
}

.quaternary .highlight,
.quaternary .subtitle {
  color: rgb(122, 201, 67);
}

.quinary .highlight,
.quinary .subtitle {
  color: rgb(255, 108, 164);
}


/* ACTION BARS */
.action-bar {
  display: block;
  width: 100%;
  margin: 10px auto;
  padding: 0;
  text-align: center;
  background-color: rgb(240, 240, 240);
}

.action-bar-left {
  float: left;
  padding: 0;
  margin: 0;
}

.action-bar-right {
  float: right;
  padding: 0;
  margin: 0;
}
/* ... */

